# Hex-a-hop

./: .gitignore  CMakeLists.txt  TODO  configure.ac
data/: Makefile.am  hex-a-hop.6  hints.html
src/: config.h.cmake  gfx.cpp  gfx_list.h  hex_puzzzle.cpp  level_list.h  menus.h  packfile.h  savestate.h  sfx.cpp  state.h  system-directory.c  system-relative.c  text.cpp  video.h
